--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "docxtemplater": "^3.37.12",
     "jszip": "^3.10.1",
     "mammoth": "^1.6.0",
+    "openai": "^3.3.0",
     "pdfreader": "^3.0.0"
   }
 }
